tweaking things trying to break it

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="jumbotron">
+    <div class="jumbotrons">
         <h1 class="display text-center">Train Scheduler</h1>
     </div>
     <div class="container">
@@ -51,7 +51,7 @@
         </div>
 
     </div>
-    <div class="jumbotron">
+    <div class="jumbotrons">
         <h1 class="display text-center">New Trains</h1>
     </div>
     <div class="container">
