last minute tweaks and fixes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <td>Ozzy's Crazy</td>
                         <td>Off the rails</td>
                         <td>Daily</td>
-                        <td>Now</td>
+                        <td>Soon</td>
                         <td>5</td>
                     </tr>
                 </table>
